toolchain/internal/core/analysis/testdata/errors/consts/typed_enum_mismatch_object.vdl
// @expect: E201

enum Status {
  Active
}

const bad Status = {
  value "active"
}
